--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>新年烟花</title>
+        <title>小张元旦快乐</title>
         <link rel="icon" type="image/x-icon" href="https://pic.imgdb.cn/item/61f794ad2ab3f51d91b07a1e.png">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet"
@@ -32,7 +32,7 @@
 
         <!-- 自定义内容弹窗 -->
         <div style="display: none">
-            <div class="shape">❤2025新年快乐❤</div>
+            <div class="shape">❤2025元旦快乐❤</div>
             <div class="shape">❤恭喜发财❤</div>
             <div class="shape">❤万事如意❤</div>
             <div class="shape">❤吉庆有余❤</div>
