--- a/index.html
+++ b/index.html
@@ -34,12 +34,10 @@
         <div style="display: none">
             <div class="shape">❤2025元旦快乐❤</div>
             <div class="shape">❤恭喜发财❤</div>
-            <div class="shape">❤万事如意❤</div>
+            <div class="shape">❤祝小张万事如意❤</div>
             <div class="shape">❤吉庆有余❤</div>
-            <div class="shape">❤心想事成❤</div>
-            <div class="shape">❤喜气盈门❤</div>
-            <div class="shape">❤阖家欢乐❤</div>
-            <div class="shape">❤财源广进❤</div>
+            <div class="shape">❤祝小张心想事成❤</div>
+            <div class="shape">❤祝小张天天开心❤</div>
         </div>
 
         <script src="main.js"></script>
