--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <!-- 自定义内容弹窗 -->
         <div style="display: none">
-            <div class="shape">❤2025元旦快乐❤</div>
+            <div class="shape">❤元旦快乐❤</div>
             <div class="shape">❤恭喜发财❤</div>
             <div class="shape">❤祝小张万事如意❤</div>
             <div class="shape">❤吉庆有余❤</div>
